@@ -15,6 +15,7 @@ Included
 - Shell doctor repair failures now emit deterministic code `SHELL_DOCTOR_REPAIR_FAILED`; Launchpad doctor parsing now surfaces this code in repair output/status.
 - Launchpad Doctor now includes `Repair Viewer`, which runs shell-doctor repair mode and reports deterministic repair output headers/status.
 - Launchpad adapter doctor parsing now extracts bracketed deterministic reason codes from strict adapter-doctor output instead of returning only generic failure code.
+- Shell doctor now emits deterministic terminal status lines (`ShellDoctorStatus: PASS` or `ShellDoctorStatus: FAIL code=SHELL_DOCTOR_CONFIG_INVALID`) so Launchpad can surface stable non-repair failure codes.
 - Launchpad History successful report open now resets viewer startup state (`UseReportViewer=1`, `ReportViewerAutoOpen=1`, `ReportViewerStartFailCount=0`) so manual viewer opens self-heal auto-open disable state.
 - Evidence typing added to operator reports (additive, non-breaking):
 - `report_card.txt` now includes an evidence legend and claim mapping lines:
